--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "browser-sync": "^2.26.3",
+    "browser-sync-webpack-plugin": "^2.0.1",
     "laravel-mix": "^4.0.14",
     "resolve-url-loader": "^2.3.1",
     "sass": "^1.16.0",
